<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Frugroup</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_new_goal">New Goal</string>
    <string name="title_activity_goal">Goal</string>
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="title_activity_register">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="logo_description">app logo</string>
    <string name="logotype_description">app logotype</string>
    <string name="welcome">Welcome to</string>
    <string name="connect_with_mint">Connect with Mint</string>
    <string name="goal_examples">Ice cream? Video games? Concert tickets? A camping trip?</string>
    <string name="prompt_cost">cost</string>
    <string name="prompt_tag">tag</string>
    <string name="prompt_description">description</string>
    <string name="prompt_add_tag">new tag</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>
    <string name="decimal_point">.</string>
    <string name="save">Save</string>

</resources>
