<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        style="@style/FullWidthBlock" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/editText1"
            android:layout_below="@id/editText1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_1" />

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_2" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_3" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Button05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_4" />

                <Button
                    android:id="@+id/Button04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_5" />

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_6" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_7" />

                <Button
                    android:id="@+id/Button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_8" />

                <Button
                    android:id="@+id/Button09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_9" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Button08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digit_0" />

                <Button
                    android:id="@+id/Button06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal_point" />
            </TableRow>
        </TableLayout>

</RelativeLayout>
