<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PaddedScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/enterCost"
            style="@style/FullWidthBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_cost"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textView1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText1"
                android:layout_alignRight="@id/editText1"
                android:layout_below="@id/editText1" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/Button02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_1" />

                    <Button
                        android:id="@+id/Button01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_2" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_3" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/Button05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_4" />

                    <Button
                        android:id="@+id/Button04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_5" />

                    <Button
                        android:id="@+id/Button03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_6" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/Button11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_7" />

                    <Button
                        android:id="@+id/Button10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_8" />

                    <Button
                        android:id="@+id/Button09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_9" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/Button08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/Button07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/digit_0" />

                    <Button
                        android:id="@+id/Button06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal_point" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/selectTag"
            style="@style/FullWidthBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_tag"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_add_tag"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/enterDescription"
            style="@style/FullWidthBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/prompt_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:ems="10"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText2"
                android:layout_alignParentRight="true"
                android:contentDescription="camera icon"
                android:src="@android:drawable/ic_menu_camera" />
        </RelativeLayout>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/form"
        android:layout_marginBottom="30dp"
        layout="@layout/confirm_bar" />

</RelativeLayout>