<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_register" />

	<EditText
        android:id="@+id/edit_user_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/edit_pass_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_user_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_hint" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_pass_register"
        android:layout_marginTop="15dp"
        android:onClick="onRegister"
        android:text="@string/title_activity_register" />

</RelativeLayout>
